--- a/bon-appetit/package.json
+++ b/bon-appetit/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "aphrodite": "^2.1.0",
     "dateformat": "^3.0.3",
     "json-server": "^0.12.1",
     "material-ui": "^0.20.0",
